@startuml
!pragma layout smetana

skinparam classAttributeIconSize 0
skinparam monochrome true

' Products (no methods shown - single compartment)
class Element <<Product>>
class Text <<Product>>
class Attr <<Product>>

' Concrete Products (no methods shown - single compartment)
class Element_Impl <<ConcreteProduct>>
class Text_Impl <<ConcreteProduct>>
class Attr_Impl <<ConcreteProduct>>

' Creator (has methods - two compartments)
abstract class Document <<Creator>> {
    createElement()
    createTextNode()
    createAttribute()
}

' Concrete Creator (has methods - two compartments)
class Document_Impl <<ConcreteCreator>> {
    createElement()
    createTextNode()
    createAttribute()
}

' Relationships
Document_Impl --|> Document

' ConcreteProducts inherit from Products
Element_Impl --|> Element
Text_Impl --|> Text
Attr_Impl --|> Attr

Document_Impl ..> Element_Impl
Document_Impl ..> Text_Impl
Document_Impl ..> Attr_Impl

note right of Document_Impl
  return new Element_Impl
  return new Text_Impl
  return new Attr_Impl
end note

note right of Document
  Element = createElement()
  Text = createTextNode()
  Attr = createAttribute()
end note

@enduml
